<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pushoverMessageModel"
            type="com.example.daniil.finsoftnotifier.models.PushoverMessageModel" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".activities.ShowMessageActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bodyID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/backgroundColor"
        android:padding="@dimen/item_padding"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/app_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/appID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_appID"
                android:inputType="text"
                android:enabled="false"
                android:textColor="@android:color/black"
                android:maxLength="60"
                android:singleLine="true"
                android:text="@={pushoverMessageModel.messageModel.apiData.token}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_input_layout">

            <EditText
                android:id="@+id/userID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_userID"
                android:enabled="false"
                android:textColor="@android:color/black"
                android:inputType="text"
                android:maxLength="60"
                android:singleLine="true"
                android:text="@={pushoverMessageModel.messageModel.apiData.user}" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/message_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_input_layout">


            <EditText
                android:id="@+id/textNotif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/prompt_textNotif"
                android:textColor="@android:color/black"
                android:maxLength="1024"
                android:text="@={pushoverMessageModel.messageModel.apiData.message}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/send_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message_input_layout">

        <EditText
            android:id="@+id/send_timeStamp_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@android:color/black"
            android:hint="@string/time_to_send_hint"
            app:unixTimestamp="@{pushoverMessageModel.messageModel.apiData.sendingTimeStamp}" />
    </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_input_layout">


            <EditText
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_title"
                android:maxLength="128"
                android:text="@={pushoverMessageModel.messageModel.apiData.title}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/url_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_input_layout">


            <EditText
                android:id="@+id/textUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_textUrl"
                android:maxLength="128"
                android:text="@={pushoverMessageModel.messageModel.apiData.url}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/url_title_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/url_input_layout">


            <EditText
                android:id="@+id/textUrl_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_textUrl_title"
                android:maxLength="128"
                android:text="@={pushoverMessageModel.messageModel.apiData.url_title}" />

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>
    </ScrollView>

</layout>


