<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="pushoverMessageModel"
            type="com.example.daniil.finsoftnotifier.models.PushoverMessageModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:layout_margin="8dp"
        android:paddingTop="0dp">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/header_constraint"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_corner_primary"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sub_app_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/app_sub_text"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/token_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:text="@{pushoverMessageModel.messageModel.apiData.token}"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sub_app_txt" />

        </android.support.constraint.ConstraintLayout>


        <TextView
            android:id="@+id/sub_message_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/message_sub_text"
            android:textColor="@color/subTextColor"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_constraint" />

        <TextView
            android:id="@+id/message_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@{pushoverMessageModel.messageModel.apiData.message}"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_message_txt" />

        <TextView
            android:id="@+id/sub_user_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:text="@string/user_sub_text"
            android:textColor="@color/subTextColor"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message_txt" />

        <TextView
            android:id="@+id/user_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:text="@{pushoverMessageModel.messageModel.apiData.user}"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_user_txt" />

        <TextView
            android:id="@+id/sub_create_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:text="@string/sub_create_date_text"
            android:textColor="@color/subTextColor"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_txt" />

        <TextView
            android:id="@+id/create_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:text="@{pushoverMessageModel.messageModel.createDate}"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_create_date" />

        <TextView
            android:id="@+id/sub_send_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="24dp"
            android:text="@string/sub_send_date_text"
            android:textColor="@color/subTextColor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_txt" />

        <TextView
            android:id="@+id/send_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            app:unixTimestamp="@{pushoverMessageModel.messageModel.apiData.sendingTimeStamp}"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_send_date" />
    </android.support.constraint.ConstraintLayout>

</layout>