<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="statsModel"
            type="com.example.daniil.finsoftnotifier.models.StatsModel" />

    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        tools:context=".activities.SendingActivity">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/headerID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/txt_Month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@{statsModel.statsDataKey.name}"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/prev_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_media_previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txt_Month"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/next_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_media_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_Month"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_Year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{statsModel.statsDataKey.year}"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_Month" />

            <View
                android:id="@+id/separator"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="32dp"
                android:background="@color/subTextColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_Year" />

        </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/bodyID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_padding"
        app:layout_constraintTop_toBottomOf="@+id/headerID">
        <TextView
            android:id="@+id/stats_sub_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/statsForPeriod"
            android:textAlignment="center"
            android:textColor="@color/subTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_sendMessages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/colorAccent"
            android:text="@string/send"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stats_sub_txt"
            app:send="@{statsModel.statsDataValue.sendNotifications}" />

        <Button
            android:id="@+id/btn_scheduleMessages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/scheduled"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sendMessages"
            app:scheduled="@{statsModel.statsDataValue.scheduleNotifications}" />
    </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@android:drawable/ic_menu_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>


</layout>


